// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserAccount Component should show and hide context menu on click 1`] = `
<div>
  <ComponentWithInjectedProps
    description="Log out"
    iconProps={
      Object {
        "iconName": "Contact",
      }
    }
    onClick={[Function]}
  />
</div>
`;

exports[`UserAccount Component should show and hide context menu on click 2`] = `
<div>
  <ComponentWithInjectedProps
    description="Log out"
    iconProps={
      Object {
        "iconName": "Contact",
      }
    }
    onClick={[Function]}
  />
  <WithResponsiveMode
    directionalHint={5}
    items={
      Array [
        Object {
          "icon": "OutOfOffice",
          "key": "logout-btn",
          "name": "Log out",
          "onClick": [Function],
        },
      ]
    }
    onDismiss={[Function]}
    shouldFocusOnMount={true}
    targetElement="mocked"
  />
</div>
`;

exports[`UserAccount Component should show and hide context menu on click 3`] = `
<div>
  <ComponentWithInjectedProps
    description="Log out"
    iconProps={
      Object {
        "iconName": "Contact",
      }
    }
    onClick={[Function]}
  />
</div>
`;
